Add more specific desired font fallbacks from Mark. Update ClojureScript dependency after boot-reload fix from Martin.

--- a/scss/partials/_atomic.scss
+++ b/scss/partials/_atomic.scss
@@ -34,6 +34,6 @@
 
 .bg-white-05 { background-color: rgba(255,255,255,.5) }
 
-.domine { font-family: 'Domine', serif; }
+.domine { font-family: 'Domine', Georgia, serif; }
 
-.open-sans {font-family: 'Open Sans', sans-serif; }
+.open-sans {font-family: 'Open Sans', Arial, sans-serif; }
