--- a/scss/modules/_fonts.scss
+++ b/scss/modules/_fonts.scss
@@ -1,2 +1,2 @@
-$oc_main_font: 'Open Sans', sans-serif;
-$oc_headers_font: 'Domine', serif;
+$oc_main_font: 'Open Sans', Arial, sans-serif;
+$oc_headers_font: 'Domine', Georgia, serif;
