--- a/scss/partials/_atomic.scss
+++ b/scss/partials/_atomic.scss
@@ -6,7 +6,7 @@
 }
 
 .btn-outline {
-  padding: .3rem 2rem;
+  padding: .5rem 2rem;
   border: solid 1px rgba(78, 90, 107, 0.5);
   opacity: 0.5;
   font-weight: 700;
@@ -22,6 +22,7 @@
 
 .btn-solid {
   background-color: $oc_yellow;
+  border: solid 1px $oc_yellow;
   font-weight: 700;
   font-size: 0.75rem;
   letter-spacing: .1em;
@@ -37,3 +38,10 @@
 .domine { font-family: 'Domine', Georgia, serif; }
 
 .open-sans {font-family: 'Open Sans', Arial, sans-serif; }
+
+.small-caps {
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: $oc_gray_5;
+}
