rename /:slug/profile to /:slug/settings and rename the company-profile component to company-settings

--- a/scss/partials/_company_settings.scss
+++ b/scss/partials/_company_settings.scss
@@ -1,10 +1,10 @@
-/* Company profile */
+/* Company settings */
 
-div.company-profile{
-  div.company-profile-container {
+div.main-company-settings{
+  div.company-settings-container {
     min-height: calc(100vh - 477px);
 
-    div.profile-container {
+    div.settings-container {
       width: 600px;
       height: 567px;
       left: 50%;
