--- a/scss/partials/_topics_columns.scss
+++ b/scss/partials/_topics_columns.scss
@@ -1,7 +1,7 @@
 div.topics-columns {
-  list-style: none;
   padding: 0;
   width: 100vw;
+  overflow-x: auto;
 
   div.topics-column-container {
     padding: 20px 30px 20px 30px;
