fix company settings and user profile pages height

--- a/scss/partials/_company_profile.scss
+++ b/scss/partials/_company_profile.scss
@@ -2,7 +2,7 @@
 
 div.company-profile{
   div.company-profile-container {
-    min-height: calc(100vh - 477px);
+    min-height: calc(100vh - 124px - #{$footer_height}px + #{$top_border_height}px);
 
     div.profile-container {
       width: 600px;
