set bg default color for company dashboard

--- a/scss/partials/_company_dashboard.scss
+++ b/scss/partials/_company_dashboard.scss
@@ -1,5 +1,5 @@
 div.company-dashboard {
-  background-color: rgb(217, 217, 217);
+  background-color: fff;
 
   div.page{
     position: relative; /* Set the position property so z-index will apply */
