add login-required style in scss

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -66,3 +66,4 @@
 @import "partials/_small_loading";
 @import "partials/_home";
 @import "partials/_list_companies";
+@import "partials/_login_required";
