--- a/scss/partials/_fullscreen_topic_edit.scss
+++ b/scss/partials/_fullscreen_topic_edit.scss
@@ -1,3 +1,14 @@
+.char-counter {
+  label {
+    opacity: 0.5;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 1px;
+    color: rgba(78, 90, 107, 0.5);
+  }
+}
+
 div.fullscreen-topic-edit {
   max-width: 575px;
   min-width: 302px;
