--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -179,7 +179,6 @@ div.topic {
           margin-top: 10px;
           margin-bottom: 20px;
           color: $oc_gray_5;
-          max-height: 31px;
           overflow: hidden;
           cursor: pointer;
           font-family: $oc_headers_font;
@@ -195,67 +194,34 @@ div.topic {
             font-family: $oc_headers_font;
             font-size: 12px;
             line-height: 1.3;
-            max-height: 31px;
             cursor: pointer;
           }
 
           a {
             text-decoration: none;
+            pointer-events: none;
           }
 
           img{
             display: none;
           }
-        }
 
-        div.topic-more {
-          margin-top: 10px;
-          text-align: center;
-
-          img {
-            width: 30px;
-            height: 30px;
-          }
-
-          i {
-            font-size: 6px;
-            margin-left: 3px;
-            line-height: 1;
-            font-weight: 600;
-            color: #bababa;
+          p:last-child {
+            margin-bottom: 0px;
+            padding-bottom: 0px;
           }
         }
 
-        div.topic-date {
+        div.topic-read-more {
+          opacity: 0.5;
+          font-weight: 800;
           font-size: 12px;
-          font-style: italic;
-          color: #A6A6A3; /* gray */
-
-          label {
-            margin: 0px;
-            font-weight: normal;
-          }
-        }
-
-        div.body-navigation-container{
-          @include mobile(){
-            padding: 0px;
-          }
-
-          @include big_web(){
-            padding: 0px 22px;
-          }
-
-          &.close{
-            overflow: hidden;
-            height: 0px;
-          }
-
-          div.topic-body-inner {
-            padding: 0px 22px;
-          }
-
-          @include topic_navigation($x_padding: 22px);
+          line-height: 1.5;
+          letter-spacing: 1px;
+          color: $oc_gray_5;
+          text-decoration: underline;
+          margin-top: 0px;
+          margin-bottom: 28px;
         }
       }
     }
