--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -2,13 +2,10 @@ div.fullscreen-topic {
   width: 100%;
   height: 100%;
   overflow: auto;
+  background-color: #f9f9f9;
 
   &.initial {
     opacity: 0;
-  }
-
-  @include mobile(){
-    background-color: rgba(255, 255, 255, 1);
   }
 
   div.edit-button {
@@ -16,7 +13,7 @@ div.fullscreen-topic {
     cursor: pointer;
     z-index: 1040;
     top: 20px;
-    right: 70px;
+    right: 20px;
     opacity: 0.2;
 
     &:hover {
@@ -38,16 +35,6 @@ div.fullscreen-topic {
     bottom: 30px;
   }
 
-  button.close {
-    position: fixed;
-    cursor: pointer;
-    z-index: 1040;
-    top: 20px;
-    right: 20px;
-    margin: 0px;
-    padding: 0px;
-  }
-
   button.close-editing {
     position: fixed;
     cursor: pointer;
@@ -58,11 +45,22 @@ div.fullscreen-topic {
     height: 32px;
   }
 
+  div.back-to-dashboard-row {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 1040;
+    padding-top: 20px;
+
+    button.back-to-dashboard {
+      margin-top: 0px;
+    }
+  }
+
   div.fullscreen-topic-transition{
     position: relative;
     height: auto;
     overflow: hidden;
-    background-color: #f9f9f9;
 
     div.fullscreen-topic-as-of {
       height: auto;
