last p in text editable divs has no bottom padding or margin

--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -178,4 +178,9 @@
   &::after{ //placeholder
     white-space: inherit;
   }
+
+  p:last-child{
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+  }
 }
