fix font: Domino is main font, Open Sans is the headers font

--- a/scss/modules/_fonts.scss
+++ b/scss/modules/_fonts.scss
@@ -1,2 +1,2 @@
-$oc_main_font: 'Open Sans', Arial, sans-serif;
-$oc_headers_font: 'Domine', Georgia, serif;
+$oc_main_font: 'Domine', Georgia, serif;
+$oc_headers_font: 'Open Sans', Arial, sans-serif;
