--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -28,6 +28,14 @@ div.fullscreen-page {
   min-height: 100vh;
   border-top: 4px solid $oc_yellow;
   width: 100%;
+
+  &.with-small-footer {
+    min-height: calc(100vh - #{$footer_small_height}px - 52px);
+  }
+
+  &.with-footer {
+    min-height: calc(100vh - #{$footer_height}px - 52px);
+  }
 }
 
 .no-scroll {
