--- a/scss/partials/_su_snapshot_preview.scss
+++ b/scss/partials/_su_snapshot_preview.scss
@@ -37,7 +37,7 @@ div.su-snapshot-preview {
 
     div.share-su {
       float: right;
-      padding: 10px 20px;
+      padding: 9px 20px 11px 0;
       height: 60px;
 
       label {
@@ -161,10 +161,6 @@ div.su-snapshot-preview {
       border-radius: 2px;
       border: 4px solid transparent;
       box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
-
-      div.card-header {
-        background-color: #f6f7f7;
-      }
 
       div.pillbox-container{
         text-align: left;
