--- a/scss/partials/_su_snapshot_preview.scss
+++ b/scss/partials/_su_snapshot_preview.scss
@@ -57,6 +57,12 @@ div.su-snapshot-preview {
         background-color: white;
         margin-left: 8px;
         float: left;
+        cursor: pointer;
+
+        &:disabled{
+          opacity: 0.4;
+          cursor: default;
+        }
 
         img {
           width: 20px;
