set the position of the remove button relative to the card not to the card width

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -59,6 +59,7 @@ div.topic {
     height: 30px;
     position: absolute;
     top: 0;
+    right: -35px;
     display: none;
 
     button.share-remove {
